--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,76 +1,56 @@
 pipeline {
     agent any
 
+    parameters {
+        string(name: 'GIT_BRANCH', defaultValue: 'main', description: 'Git branch to build')
+        string(name: 'DOCKER_TAG', defaultValue: 'latest', description: 'Tag for Docker images')
+        choice(name: 'DEPLOY_ENV', choices: ['dev', 'staging', 'prod'], description: 'Choose environment for deployment')
+        string(name: 'EC2_IP', defaultValue: '1.2.3.4', description: 'Target EC2 instance public IP')
+    }
+
     environment {
         DOCKER_HUB_USER = 'your-dockerhub-username'
-        DOCKER_HUB_PASS = credentials('dockerhub-creds') // Add Jenkins credential ID
-        BACKEND_IMAGE = "${DOCKER_HUB_USER}/backend-app"
+        DOCKER_HUB_PASS = credentials('dockerhub-creds')  // Jenkins credential ID
+        BACKEND_IMAGE = "${DOCKER_HUB_USER}/springboot-backend"
         FRONTEND_IMAGE = "${DOCKER_HUB_USER}/frontend-app"
     }
 
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/your-repo-url.git'
+                git branch: "${params.GIT_BRANCH}", url: 'https://github.com/your-repo-url.git'
             }
         }
 
-        stage('Build Backend Image') {
+        stage('Build Backend with Maven') {
             steps {
                 dir('backend') {
-                    script {
-                        sh 'docker build -t $BACKEND_IMAGE:latest .'
+                    sh 'mvn clean package -DskipTests'
+                }
+            }
+        }
+
+        stage('Build Docker Images') {
+            parallel {
+                stage('Backend Image') {
+                    steps {
+                        dir('backend') {
+                            sh 'docker build -t $BACKEND_IMAGE:${DOCKER_TAG} .'
+                        }
+                    }
+                }
+                stage('Frontend Image') {
+                    steps {
+                        dir('frontend') {
+                            sh 'docker build -t $FRONTEND_IMAGE:${DOCKER_TAG} .'
+                        }
                     }
                 }
             }
         }
 
-        stage('Build Frontend Image') {
-            steps {
-                dir('frontend') {
-                    script {
-                        sh 'docker build -t $FRONTEND_IMAGE:latest .'
-                    }
-                }
-            }
-        }
-
-        stage('Push Images to Docker Hub') {
+        stage('Push Docker Images') {
             steps {
                 script {
                     sh '''
-                    echo $DOCKER_HUB_PASS | docker login -u $DOCKER_HUB_USER --password-stdin
-                    docker push $BACKEND_IMAGE:latest
-                    docker push $FRONTEND_IMAGE:latest
-                    '''
-                }
-            }
-        }
-
-        stage('Deploy to EC2') {
-            steps {
-                script {
-                    sh '''
-                    ssh -o StrictHostKeyChecking=no ec2-user@<EC2_PUBLIC_IP> << EOF
-                    docker pull $BACKEND_IMAGE:latest
-                    docker pull $FRONTEND_IMAGE:latest
-                    docker stop backend frontend || true
-                    docker rm backend frontend || true
-                    docker run -d --name backend -p 3000:3000 $BACKEND_IMAGE:latest
-                    docker run -d --name frontend -p 80:80 $FRONTEND_IMAGE:latest
-                    EOF
-                    '''
-                }
-            }
-        }
-    }
-
-    post {
-        success {
-            echo '✅ Deployment successful!'
-        }
-        failure {
-            echo '❌ Deployment failed!'
-        }
-    }
-}
+                    echo $DOCKER_HUB_PASS | doc
