--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,61 +1,74 @@
 pipeline {
     agent any
 
-    parameters {
-        string(name: 'GIT_BRANCH',
-               defaultValue: 'branch1',
-               description: 'Git branch to checkout')
-        string(name: 'DOCKER_TAG',
-               defaultValue: 'latest',
-               description: 'Docker image tag to build and run')
-        string(name: 'HOST',
-               defaultValue: 'Enter-ip-adress',
-               description: 'Deploy in ec2')
-    }
-
     environment {
-        DOCKER_HUB_USER = 'your-dockerhub-username'
-        DOCKER_HUB_PASS = credentials('dockerhub-creds')  // Jenkins credential ID
-        BACKEND_IMAGE = "${DOCKER_HUB_USER}/springboot-backend"
-        FRONTEND_IMAGE = "${DOCKER_HUB_USER}/frontend-app"
+        DOCKERHUB_CREDENTIALS = credentials('dockerhub-credentials') // Jenkins credential ID
+        DOCKERHUB_USER = 'your-dockerhub-username'
+        BACKEND_IMAGE = "${DOCKERHUB_USER}/backend-app"
+        FRONTEND_IMAGE = "${DOCKERHUB_USER}/frontend-app"
     }
 
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: "${params.GIT_BRANCH}", url: 'https://github.com/your-repo-url.git'
+                echo "Checking out code from repository..."
+                checkout scm
             }
         }
 
-        stage('Build Backend with Maven') {
-            steps {
-                dir('backend') {
-                    sh 'mvn clean package -DskipTests'
-                }
-            }
-        }
-
-        stage('Build Docker Images') {
-            parallel {
-                stage('Backend Image') {
-                    steps {
-                        dir('backend') {
-                            sh 'docker build -t $BACKEND_IMAGE:${DOCKER_TAG} .'
-                        }
-                    }
-                }
-                stage('Frontend Image') {
-                    steps {
-                        dir('frontend') {
-                            sh 'docker build -t $FRONTEND_IMAGE:${DOCKER_TAG} .'
-                        }
-                    }
-                }
-            }
-        }
-
-        stage('Push Docker Images') {
+        stage('Build Backend Docker Image') {
             steps {
                 script {
-                    sh '''
-                    echo $DOCKER_HUB_PASS | doc
+                    dir('backend') {
+                        sh 'docker build -t $BACKEND_IMAGE:latest .'
+                    }
+                }
+            }
+        }
+
+        stage('Build Frontend Docker Image') {
+            steps {
+                script {
+                    dir('frontend') {
+                        sh 'docker build -t $FRONTEND_IMAGE:latest .'
+                    }
+                }
+            }
+        }
+
+        stage('Push Images to Docker Hub') {
+            steps {
+                script {
+                    sh """
+                        echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin
+                        docker push $BACKEND_IMAGE:latest
+                        docker push $FRONTEND_IMAGE:latest
+                        docker logout
+                    """
+                }
+            }
+        }
+
+        stage('Deploy to Kubernetes') {
+            steps {
+                script {
+                    echo "Deploying backend and frontend to Kubernetes..."
+                    sh """
+                        kubectl apply -f k8s/mysql-deployment.yaml
+                        kubectl apply -f k8s/backend-deployment.yaml
+                        kubectl apply -f k8s/frontend-deployment.yaml
+                    """
+                }
+            }
+        }
+    }
+
+    post {
+        success {
+            echo '✅ Deployment successful!'
+        }
+        failure {
+            echo '❌ Deployment failed!'
+        }
+    }
+}
